Update 'product-box' component. Add 'old-price' class. Minor fixies
Add 'old-price' class for styling price before discount. 'old-price' element (div/span) should be inside container 'price' as prev-sibling of discounted price.
Minor fixes:
- make 'prices' font-size slightly larger (according to design it should be bigger than in regular buttons),
- prevent wrapping after dollar sign in price (according to design there shouldn't be white-space)

--- a/src/index.html
+++ b/src/index.html
@@ -186,6 +186,7 @@
                 <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
               </div>
               <div class="price">
+                <div class="old-price">$ 25.00</div>
                 <div class="btn-main-small no-hover">$ 30.00</div>
               </div>
             </div>
