Fix features links text decoration remove

--- a/src/index.html
+++ b/src/index.html
@@ -88,7 +88,7 @@
     <div class="container">
       <div class="row">
         <div class="col">
-          <a href="http://example.com">
+          <a href="http://example.com" style="text-decoration:none;">
             <div class="feature-box">
               <div class="icon">
                 <i class="fas fa-truck"></i>
@@ -101,7 +101,7 @@
           </a>
         </div>
         <div class="col">
-          <a href="http://example.com">
+          <a href="http://example.com" style="text-decoration:none;">
             <div class="feature-box">
               <div class="icon">
                 <i class="fas fa-headphones"></i>
@@ -114,7 +114,7 @@
           </a>
         </div>
         <div class="col">
-          <a href="http://example.com">
+          <a href="http://example.com" style="text-decoration:none;">
             <div class="feature-box">
               <div class="icon">
                 <i class="fas fa-reply-all"></i>
@@ -127,7 +127,7 @@
           </a>
         </div>
         <div class="col">
-          <a href="http://example.com">
+          <a href="http://example.com" style="text-decoration:none;">
             <div class="feature-box">
               <div class="icon">
                 <i class="fas fa-bullhorn"></i>
