--- a/src/index.html
+++ b/src/index.html
@@ -102,64 +102,61 @@
       </div>
     </div>
   </header>
+
   <div class="section--features">
     <div class="container">
       <div class="row">
-        <div class="col">
-          <a href="http://example.com" style="text-decoration:none;">
-            <div class="feature-box">
-              <div class="icon">
-                <i class="fas fa-truck"></i>
-              </div>
-              <div class="content">
-                <h5>Free shipping</h5>
-                <p>All orders</p>
-              </div>
+        <div class="col-6 col-lg-3 feature-box-wrapper">
+          <a href="#!" class="feature-box">
+            <div class="icon">
+              <i class="fas fa-truck"></i>
+            </div>
+            <div class="content">
+              <h5>Free shipping</h5>
+              <p>All orders</p>
             </div>
           </a>
         </div>
-        <div class="col">
-          <a href="http://example.com" style="text-decoration:none;">
-            <div class="feature-box">
-              <div class="icon">
-                <i class="fas fa-headphones"></i>
-              </div>
-              <div class="content">
-                <h5>24/7 customer</h5>
-                <p>support</p>
-              </div>
+
+        <div class="col-6 col-lg-3 feature-box-wrapper">
+          <a href="#!" class="feature-box">
+            <div class="icon">
+              <i class="fas fa-headphones"></i>
+            </div>
+            <div class="content">
+              <h5>24/7 customer</h5>
+              <p>support</p>
             </div>
           </a>
         </div>
-        <div class="col">
-          <a href="http://example.com" style="text-decoration:none;">
-            <div class="feature-box">
-              <div class="icon">
-                <i class="fas fa-reply-all"></i>
-              </div>
-              <div class="content">
-                <h5>Money back</h5>
-                <p>guarantee</p>
-              </div>
+
+        <div class="col-6 col-lg-3 feature-box-wrapper">
+          <a href="#!" class="feature-box">
+            <div class="icon">
+              <i class="fas fa-reply-all"></i>
+            </div>
+            <div class="content">
+              <h5>Money back</h5>
+              <p>guarantee</p>
             </div>
           </a>
         </div>
-        <div class="col">
-          <a href="http://example.com" style="text-decoration:none;">
-            <div class="feature-box">
-              <div class="icon">
-                <i class="fas fa-bullhorn"></i>
-              </div>
-              <div class="content">
-                <h5>Member discount</h5>
-                <p>First order</p>
-              </div>
+
+        <div class="col-6 col-lg-3 feature-box-wrapper">
+          <a href="#!" class="feature-box">
+            <div class="icon">
+              <i class="fas fa-bullhorn"></i>
+            </div>
+            <div class="content">
+              <h5>Member discount</h5>
+              <p>First order</p>
             </div>
           </a>
         </div>
       </div>
     </div>
   </div>
+
   <div class="section--products">
     <div class="container">
       <div class="panel-bar">
