--- a/src/index.html
+++ b/src/index.html
@@ -529,7 +529,7 @@
     <div class="footer-menu">
       <div class="container">
         <div class="row">
-          <div class="col">
+          <div class="col-xs-6 col-sm-6 col-md-3 col-lg-3">
             <div class="menu-wrapper">
               <h6>Information</h6>
               <ul>
@@ -540,7 +540,7 @@
               </ul>
             </div>
           </div>
-          <div class="col">
+          <div class="col-xs-6 col-sm-6 col-md-3 col-lg-3">
             <div class="menu-wrapper">
               <h6>My account</h6>
               <ul>
@@ -551,7 +551,7 @@
               </ul>
             </div>
           </div>
-          <div class="col">
+          <div class="col-xs-6 col-sm-6 col-md-3 col-lg-3">
             <div class="menu-wrapper">
               <h6>Information</h6>
               <ul>
@@ -562,7 +562,7 @@
               </ul>
             </div>
           </div>
-          <div class="col">
+          <div class="col-xs-6 col-sm-6 col-md-3 col-lg-3">
             <div class="menu-wrapper">
               <h6>Orders</h6>
               <ul>
@@ -580,11 +580,11 @@
     <div class="bottom-bar">
       <div class="container">
         <div class="row align-items-center">
-          <div class="col"></div>
-          <div class="col copyright text-center">
+          <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4"></div>
+          <div class="col-xs-6 col-sm-6 col-md-6 col-lg-4 copyright text-center">
             <p>©Copyright 2016 Bazar | All Rights Reserved</p>
           </div>
-          <div class="col socialmedia text-right">
+          <div class="col-xs-6 col-sm-6 col-md-6 col-lg-4 socialmedia text-right">
             <ul>
               <li><a href="#"><i class="fab fa-twitter"></i></a></li>
               <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
