Add RWD for 'products' section

--- a/src/index.html
+++ b/src/index.html
@@ -183,7 +183,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-3">
+        <div class="col-12 col-sm-6 col-lg-4 col-xl-3">
           <div class="product-box">
             <div class="photo">
               <div class="sale">sale</div>
@@ -215,7 +215,7 @@
             </div>
           </div>
         </div>
-        <div class="col-3">
+        <div class="col-12 col-sm-6 col-lg-4 col-xl-3">
           <div class="product-box">
             <div class="photo">
               <div class="sale">sale</div>
@@ -246,7 +246,7 @@
             </div>
           </div>
         </div>
-        <div class="col-3">
+        <div class="col-12 col-sm-6 col-lg-4 col-xl-3">
           <div class="product-box">
             <div class="photo">
               <div class="sale">sale</div>
@@ -277,7 +277,7 @@
             </div>
           </div>
         </div>
-        <div class="col-3">
+        <div class="col-12 col-sm-6 col-lg-4 col-xl-3">
           <div class="product-box">
             <div class="photo">
               <div class="sale">sale</div>
@@ -308,7 +308,7 @@
             </div>
           </div>
         </div>
-        <div class="col-3">
+        <div class="col-12 col-sm-6 col-lg-4 col-xl-3">
           <div class="product-box">
             <div class="photo">
               <div class="sale">sale</div>
@@ -339,7 +339,7 @@
             </div>
           </div>
         </div>
-        <div class="col-3">
+        <div class="col-12 col-sm-6 col-lg-4 col-xl-3">
           <div class="product-box">
             <div class="photo">
               <div class="sale">sale</div>
@@ -370,7 +370,7 @@
             </div>
           </div>
         </div>
-        <div class="col-3">
+        <div class="col-12 col-sm-6 col-lg-4 col-xl-3">
           <div class="product-box">
             <div class="photo">
               <div class="sale">sale</div>
@@ -401,7 +401,7 @@
             </div>
           </div>
         </div>
-        <div class="col-3">
+        <div class="col-12 col-sm-6 col-lg-4 col-xl-3">
           <div class="product-box">
             <div class="photo">
               <div class="sale">sale</div>
