--- a/src/index.html
+++ b/src/index.html
@@ -41,8 +41,8 @@
           </div>
           <div class="col text-right">
             <ul>
-              <li><a href="#"><i class="fas fa-user"></i> Login</a></li>
-              <li><a href="#"><i class="fas fa-lock"></i> Register</a></li>
+              <li><a href="#"><i class="fas fa-user"></i> </a></li>
+              <li><a href="#"><i class="fas fa-lock"></i> </a></li>
               <li><a href="#"><i class="fas fa-bars"></i></a></li>
             </ul>
           </div>
