Add main menu behavior

--- a/src/index.html
+++ b/src/index.html
@@ -77,7 +77,14 @@
               <div class="category">
                 <i class="fas fa-list-ul"></i>
                 <select name="" id="">
-                  <option value="">Select a category</option>
+                  <option value="Choosee a category" hidden="true" selected disabled="true" display="none">Choosee a category</option>
+                  <option value="Home">Home</option>
+                  <option value="Furniture">Furniture</option>
+                  <option value="Chair">Chair</option>
+                  <option value="Table">Table</option>
+                  <option value="Sofa">Sofa</option>
+                  <option value="Bedrom">Bedrom</option>
+                  <option value="Blog">Blog</option>
                 </select>
                 <i class="fas fa-caret-down"></i>
               </div>
