Fix unnecessary code deleted

--- a/src/index.html
+++ b/src/index.html
@@ -77,7 +77,7 @@
               <div class="category">
                 <i class="fas fa-list-ul"></i>
                 <select name="" id="">
-                  <option value="Choosee a category" hidden="true" selected disabled="true" display="none">Choosee a category</option>
+                  <option value="Choose a category" hidden="true" selected disabled="true" display="none">Choose a category</option>
                   <option value="Home">Home</option>
                   <option value="Furniture">Furniture</option>
                   <option value="Chair">Chair</option>
