--- a/src/index.html
+++ b/src/index.html
@@ -109,6 +109,87 @@
     </div>
   </header>
 
+  <div class="section--promoted">
+    <div class="container">
+      <div class="row">
+        <div class="col-4 hot-deals">
+          <header class="header">
+            <h3 class="header-text">Hot deals</h3>
+            <div class="dots">
+              <ul class="slider-nav">
+                <li></li>
+                <li></li>
+                <li></li>
+              </ul>
+            </div>
+          </header>
+          <div class="product-box">
+              <div class="photo">
+                <img src="images/golden-armchair.jpg" alt="">
+                <div class="buttons">
+                  <a href="#!" class="btn-main-small"><i class="fa fa-shopping-basket"></i> ADD TO CART</a>
+                </div>
+                <div class="timer">
+                  <div class="timer-shield">
+                    <span class="timer-value">25</span>
+                    <span class="timer-label">days</span>
+                  </div>
+                  <div class="timer-shield">
+                    <span class="timer-value">10</span>
+                    <span class="timer-label">hrs</span>
+                  </div>
+                  <div class="timer-shield">
+                    <span class="timer-value">45</span>
+                    <span class="timer-label">mins</span>
+                  </div>
+                  <div class="timer-shield">
+                    <span class="timer-value">30</span>
+                    <span class="timer-label">secs</span>
+                  </div>
+                </div>
+                
+              </div>
+              <div class="content">
+                <h5>Aenean Ru Bristique</h5>
+                <div class="stars">
+                  <a class="full"></a>
+                  <a class="full"></a>
+                  <a class="full"></a>
+                  <a class="full"></a>
+                  <a ></a>
+                </div>
+              </div>
+              <div class="line"></div>
+              <div class="actions">
+                <div class="outlines">
+                  <a href="#!" class="btn-outline"><i class="far fa-eye"></i></a>
+                  <a href="#!" class="btn-outline"><i class="far fa-heart"></i></a>
+                  <a href="#!" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
+                </div>
+                <div class="price">
+                    <div class="old-price">$ 25.00</div>
+                    <div class="btn-main-small no-hover">$ 30.00</div>
+                  </div>
+              </div>
+            </div>
+        </div>
+        <div class="col-8 promo-slider">
+          <div class="promo-slider-content">
+            <header class="slogan-wrapper">
+              <h1 class="slogan">Indoor <span class="slogan-strong">furniture</span></h1>
+              <h3 class="slogan-small">save up to 50% of all furniture</h3>
+              <a href="#!" class="btn btn-light">Shop now</a>
+            </header>
+          </div>
+          <div class="promo-slider-nav">
+            <a href="#!" class="col slider-prev-btn"><i class="fas fa-chevron-left"></i></a>
+            <a href="#!" class="col slider-next-btn"><i class="fas fa-chevron-right"></i></a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <div class="section--features">
     <div class="container">
       <div class="row">
