Add 'tiny-slider' script to 'vendors'. Move 'bootstrap` script to 'vendors'

--- a/src/index.html
+++ b/src/index.html
@@ -611,7 +611,8 @@
     crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
     crossorigin="anonymous"></script>
-  <script src="./scripts/bootstrap.min.js"></script>
+  <script src="./scripts/vendors/bootstrap.min.js"></script>
+  <script src="./scripts/vendors/tiny-slider.js"></script>
   <script src="./scripts/app.js"></script>
 </body>
 
