Add 'slider-factory' script. Add 'products-slider' to page.

--- a/src/index.html
+++ b/src/index.html
@@ -180,16 +180,13 @@
             </ul>
           </div>
           <div class="col-auto dots">
-            <ul>
-              <li><a href="#" class="active"></a></li>
-              <li><a href="#"></a></li>
-              <li><a href="#"></a></li>
+            <ul class="products-slider-nav">
             </ul>
           </div>
         </div>
       </div>
-      <div class="row">
-        <div class="col-12 col-sm-6 col-lg-4 col-xl-3">
+      <div class="products-slider">
+        <div class="slider-item">
           <div class="product-box">
             <div class="photo" style="background-image: url(images/product1.png)">
               <div class="sale">sale</div>
@@ -221,7 +218,7 @@
             </div>
           </div>
         </div>
-        <div class="col-12 col-sm-6 col-lg-4 col-xl-3">
+        <div class="slider-item">
           <div class="product-box">
             <div class="photo" style="background-image: url(images/product2.png)">
               <div class="sale">sale</div>
@@ -252,7 +249,7 @@
             </div>
           </div>
         </div>
-        <div class="col-12 col-sm-6 col-lg-4 col-xl-3">
+        <div class="slider-item">
           <div class="product-box">
             <div class="photo" style="background-image: url(images/product3.png)">
               <div class="sale">sale</div>
@@ -283,7 +280,7 @@
             </div>
           </div>
         </div>
-        <div class="col-12 col-sm-6 col-lg-4 col-xl-3">
+        <div class="slider-item">
           <div class="product-box">
             <div class="photo" style="background-image: url(images/product4.png)">
               <div class="sale">sale</div>
@@ -314,7 +311,7 @@
             </div>
           </div>
         </div>
-        <div class="col-12 col-sm-6 col-lg-4 col-xl-3">
+        <div class="slider-item">
           <div class="product-box">
             <div class="photo" style="background-image: url(images/product5.png)">
               <div class="sale">sale</div>
@@ -345,7 +342,7 @@
             </div>
           </div>
         </div>
-        <div class="col-12 col-sm-6 col-lg-4 col-xl-3">
+        <div class="slider-item">
           <div class="product-box">
             <div class="photo" style="background-image: url(images/product6.png)">
               <div class="sale">sale</div>
@@ -376,7 +373,7 @@
             </div>
           </div>
         </div>
-        <div class="col-12 col-sm-6 col-lg-4 col-xl-3">
+        <div class="slider-item">
           <div class="product-box">
             <div class="photo" style="background-image: url(images/product7.png)">
               <div class="sale">sale</div>
@@ -407,7 +404,7 @@
             </div>
           </div>
         </div>
-        <div class="col-12 col-sm-6 col-lg-4 col-xl-3">
+        <div class="slider-item">
           <div class="product-box">
             <div class="photo" style="background-image: url(images/product8.png)">
               <div class="sale">sale</div>
@@ -613,6 +610,7 @@
     crossorigin="anonymous"></script>
   <script src="./scripts/vendors/bootstrap.min.js"></script>
   <script src="./scripts/vendors/tiny-slider.js"></script>
+  <script src="./scripts/slider-factory.js"></script>
   <script src="./scripts/app.js"></script>
 </body>
 
