--- a/src/index.html
+++ b/src/index.html
@@ -194,7 +194,7 @@
                 <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
               </div>
               <div class="price">
-                <div class="btn-main-small no-hover">$ 30.00</div>
+                <div class="btn-main-small no-hover btn-price">$ 30.00</div>
               </div>
             </div>
           </div>
@@ -225,7 +225,7 @@
                 <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
               </div>
               <div class="price">
-                <div class="btn-main-small no-hover">$ 30.00</div>
+                <div class="btn-main-small no-hover btn-price">$ 30.00</div>
               </div>
             </div>
           </div>
@@ -256,7 +256,7 @@
                 <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
               </div>
               <div class="price">
-                <div class="btn-main-small no-hover">$ 30.00</div>
+                <div class="btn-main-small no-hover btn-price">$ 30.00</div>
               </div>
             </div>
           </div>
@@ -287,7 +287,7 @@
                 <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
               </div>
               <div class="price">
-                <div class="btn-main-small no-hover">$ 30.00</div>
+                <div class="btn-main-small no-hover btn-price">$ 30.00</div>
               </div>
             </div>
           </div>
@@ -318,7 +318,7 @@
                 <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
               </div>
               <div class="price">
-                <div class="btn-main-small no-hover">$ 30.00</div>
+                <div class="btn-main-small no-hover btn-price">$ 30.00</div>
               </div>
             </div>
           </div>
@@ -349,7 +349,7 @@
                 <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
               </div>
               <div class="price">
-                <div class="btn-main-small no-hover">$ 30.00</div>
+                <div class="btn-main-small no-hover btn-price">$ 30.00</div>
               </div>
             </div>
           </div>
@@ -380,7 +380,7 @@
                 <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
               </div>
               <div class="price">
-                <div class="btn-main-small no-hover">$ 30.00</div>
+                <div class="btn-main-small no-hover btn-price">$ 30.00</div>
               </div>
             </div>
           </div>
@@ -411,7 +411,7 @@
                 <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
               </div>
               <div class="price">
-                <div class="btn-main-small no-hover">$ 30.00</div>
+                <div class="btn-main-small no-hover btn-price">$ 30.00</div>
               </div>
             </div>
           </div>
