--- a/src/index.html
+++ b/src/index.html
@@ -88,48 +88,56 @@
     <div class="container">
       <div class="row">
         <div class="col">
-          <div class="feature-box active">
-            <div class="icon">
-              <i class="fas fa-truck"></i>
+          <a href="#" class="feature-link" id="feature-link-1">
+            <div class="feature-box">
+              <div class="icon">
+                <i class="fas fa-truck"></i>
+              </div>
+              <div class="content">
+                <h5>Free shipping</h5>
+                <p>All orders</p>
+              </div>
             </div>
-            <div class="content">
-              <h5>Free shipping</h5>
-              <p>All orders</p>
-            </div>
-          </div>
+          </a>
         </div>
         <div class="col">
-          <div class="feature-box">
-            <div class="icon">
-              <i class="fas fa-headphones"></i>
+          <a href="#" class="feature-link" id="feature-link-2">
+            <div class="feature-box">
+              <div class="icon">
+                <i class="fas fa-headphones"></i>
+              </div>
+              <div class="content">
+                <h5>24/7 customer</h5>
+                <p>support</p>
+              </div>
             </div>
-            <div class="content">
-              <h5>24/7 customer</h5>
-              <p>support</p>
-            </div>
-          </div>
+          </a>
         </div>
         <div class="col">
-          <div class="feature-box">
-            <div class="icon">
-              <i class="fas fa-reply-all"></i>
+          <a href="#" class="feature-link" id="feature-link-3">
+            <div class="feature-box">
+              <div class="icon">
+                <i class="fas fa-reply-all"></i>
+              </div>
+              <div class="content">
+                <h5>Money back</h5>
+                <p>guarantee</p>
+              </div>
             </div>
-            <div class="content">
-              <h5>Money back</h5>
-              <p>guarantee</p>
-            </div>
-          </div>
+          </a>
         </div>
         <div class="col">
-          <div class="feature-box">
-            <div class="icon">
-              <i class="fas fa-bullhorn"></i>
+          <a href="#" class="feature-link" id="feature-link-4">
+            <div class="feature-box">
+              <div class="icon">
+                <i class="fas fa-bullhorn"></i>
+              </div>
+              <div class="content">
+                <h5>Member discount</h5>
+                <p>First order</p>
+              </div>
             </div>
-            <div class="content">
-              <h5>Member discount</h5>
-              <p>First order</p>
-            </div>
-          </div>
+          </a>
         </div>
       </div>
     </div>
