--- a/src/index.html
+++ b/src/index.html
@@ -102,7 +102,7 @@
         </div>
         <div class="col">
           <div class="feature-box">
-            <a class="feature-box-link" href="google.com">
+            <a class="feature-box-link" href="#">
               <div class="icon">
                 <i class="fas fa-headphones"></i>
               </div>
