remove cursor: pointer and change to a tag

--- a/src/index.html
+++ b/src/index.html
@@ -89,7 +89,7 @@
       <div class="row">
         <div class="col">
           <div class="feature-box active">
-            <a class="feature-box-link" href="#">
+            <a href="#">
               <div class="icon">
                 <i class="fas fa-truck"></i>
               </div>
@@ -102,7 +102,7 @@
         </div>
         <div class="col">
           <div class="feature-box">
-            <a class="feature-box-link" href="google.com">
+            <a href="#">
               <div class="icon">
                 <i class="fas fa-headphones"></i>
               </div>
@@ -115,7 +115,7 @@
         </div>
         <div class="col">
           <div class="feature-box">
-            <a class="feature-box-link" href="#">
+            <a href="#">
               <div class="icon">
                 <i class="fas fa-reply-all"></i>
               </div>
@@ -128,7 +128,7 @@
         </div>
         <div class="col">
           <div class="feature-box">
-            <a class="feature-box-link" href="#">
+            <a href="#">
               <div class="icon">
                 <i class="fas fa-bullhorn"></i>
               </div>
