add div with old price

--- a/src/index.html
+++ b/src/index.html
@@ -193,6 +193,7 @@
                 <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
                 <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
               </div>
+              <div class="old-price"></div>
               <div class="price">
                 <div class="btn-main-small no-hover">$ 30.00</div>
               </div>
@@ -224,6 +225,7 @@
                 <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
                 <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
               </div>
+              <div class="old-price"></div>
               <div class="price">
                 <div class="btn-main-small no-hover">$ 30.00</div>
               </div>
@@ -255,6 +257,7 @@
                 <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
                 <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
               </div>
+              <div class="old-price">$ 20.00</div>
               <div class="price">
                 <div class="btn-main-small no-hover">$ 30.00</div>
               </div>
@@ -286,6 +289,7 @@
                 <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
                 <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
               </div>
+              <div class="old-price">$ 35.00</div>
               <div class="price">
                 <div class="btn-main-small no-hover">$ 30.00</div>
               </div>
@@ -317,6 +321,7 @@
                 <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
                 <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
               </div>
+              <div class="old-price"></div>
               <div class="price">
                 <div class="btn-main-small no-hover">$ 30.00</div>
               </div>
@@ -348,6 +353,7 @@
                 <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
                 <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
               </div>
+              <div class="old-price"></div>
               <div class="price">
                 <div class="btn-main-small no-hover">$ 30.00</div>
               </div>
@@ -379,6 +385,7 @@
                 <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
                 <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
               </div>
+              <div class="old-price">$ 20.00</div>
               <div class="price">
                 <div class="btn-main-small no-hover">$ 30.00</div>
               </div>
@@ -410,6 +417,7 @@
                 <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
                 <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
               </div>
+              <div class="old-price">$ 35.00</div>
               <div class="price">
                 <div class="btn-main-small no-hover">$ 30.00</div>
               </div>
