--- a/src/index.html
+++ b/src/index.html
@@ -58,8 +58,13 @@
             <form action="" class="search-form">
               <div class="category">
                 <i class="fas fa-list-ul"></i>
-                <select name="" id="">
-                  <option value="">Select a category</option>
+                <select calss="selectpicker" name="select-category" id="select">
+                  <option value="select-category-option">Select a category</option>
+                  <option value="bed">Bed</option>
+                  <option value="chair">Chair</option>
+                  <option value="sofa">Sofa</option>
+                  <option value="table">Table</option>
+                  <option value="dining">Dining</option>
                 </select>
                 <i class="fas fa-caret-down"></i>
               </div>
