--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,7 @@
             <form action="" class="search-form">
               <div class="category">
                 <i class="fas fa-list-ul"></i>
-                <select calss="selectpicker" name="select-category" id="select">
+                <select name="select-category" id="select">
                   <option value="select-category-option">Select a category</option>
                   <option value="bed">Bed</option>
                   <option value="chair">Chair</option>
