--- a/src/index.html
+++ b/src/index.html
@@ -58,9 +58,30 @@
             <form action="" class="search-form">
               <div class="category">
                 <i class="fas fa-list-ul"></i>
-                <select name="" id="">
-                  <option value="">Select a category</option>
-                </select>
+                <nav class="navigation">
+                  <ul>
+                    <li>
+                      <a href="#">Select a category</a>
+                      <ul>
+                        <li>
+                          <a href="#">Bed</a>
+                        </li>
+                        <li>
+                          <a href="#">Chair</a>
+                        </li>
+                        <li>
+                          <a href="#">Sofa</a>
+                        </li>
+                        <li>
+                          <a href="#">Table</a>
+                        </li>
+                        <li>
+                          <a href="#">Dining</a>
+                        </li>
+                      </ul>
+                    </li>
+                  </ul>
+                </nav>
                 <i class="fas fa-caret-down"></i>
               </div>
               <div class="search-field">
