add graphics blog section

--- a/src/index.html
+++ b/src/index.html
@@ -525,7 +525,14 @@
           </div>
         </div>
       </div>
-    </div>
+        <div class="brand">
+          <img src="images/Layer-138.png">
+          <img src="images/Layer-139.png">
+          <img src="images/Layer-140.png">
+          <img src="images/Layer-141.png">
+          <img src="images/Layer-142.png">
+        </div>    
+    </div>    
   </div>
   <footer>
     <div class="footer-menu">
