--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,6 @@
   <title>Furnitures shop</title>
   <link rel="stylesheet" href="./css/style.css">
 </head>
-
 <body>
   <header>
     <div class="top-bar">
@@ -182,8 +181,8 @@
             <div class="line"></div>
             <div class="actions">
               <div class="outlines">
-                <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
-                <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
+                <a href="#" class="btn-outline active"><i class="far fa-heart"></i></a>
+                <a href="#" class="btn-outline active"><i class="fas fa-exchange-alt"></i></a>
               </div>
               <div class="price">
                 <div class="btn-main-small no-hover">$ 30.00</div>
@@ -244,8 +243,8 @@
             <div class="line"></div>
             <div class="actions">
               <div class="outlines">
-                <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
-                <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
+                <a href="#" class="btn-outline active"><i class="far fa-heart"></i></a>
+                <a href="#" class="btn-outline active"><i class="fas fa-exchange-alt"></i></a>
               </div>
               <div class="price">
                 <div class="btn-main-small no-hover">$ 30.00</div>
@@ -306,8 +305,8 @@
             <div class="line"></div>
             <div class="actions">
               <div class="outlines">
-                <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
-                <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
+                <a href="#" class="btn-outline active"><i class="far fa-heart"></i></a>
+                <a href="#" class="btn-outline active"><i class="fas fa-exchange-alt"></i></a>
               </div>
               <div class="price">
                 <div class="btn-main-small no-hover">$ 30.00</div>
@@ -368,8 +367,8 @@
             <div class="line"></div>
             <div class="actions">
               <div class="outlines">
-                <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
-                <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
+                <a href="#" class="btn-outline active"><i class="far fa-heart"></i></a>
+                <a href="#" class="btn-outline active"><i class="fas fa-exchange-alt"></i></a>
               </div>
               <div class="price">
                 <div class="btn-main-small no-hover">$ 30.00</div>
