--- a/src/index.html
+++ b/src/index.html
@@ -244,7 +244,7 @@
             <div class="actions">
               <div class="outlines">
                 <a href="#" class="btn-outline active"><i class="far fa-heart"></i></a>
-                <a href="#" class="btn-outline active"><i class="fas fa-exchange-alt"></i></a>
+                <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
               </div>
               <div class="price">
                 <div class="btn-main-small no-hover">$ 30.00</div>
@@ -305,7 +305,7 @@
             <div class="line"></div>
             <div class="actions">
               <div class="outlines">
-                <a href="#" class="btn-outline active"><i class="far fa-heart"></i></a>
+                <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
                 <a href="#" class="btn-outline active"><i class="fas fa-exchange-alt"></i></a>
               </div>
               <div class="price">
