Top menu RWD made

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,6 @@
   <title>Furnitures shop</title>
   <link rel="stylesheet" href="./css/style.css">
 </head>
-
 <body>
   <header>
     <div class="top-bar">
@@ -23,9 +22,18 @@
           </div>
           <div class="col text-right">
             <ul>
-              <li><a href="#"><i class="fas fa-user"></i> Login</a></li>
-              <li><a href="#"><i class="fas fa-lock"></i> Register</a></li>
-              <li><a href="#"><i class="fas fa-bars"></i></a></li>
+              <li>
+                <i class="fas fa-user"></i>
+                <a href="#"> Login</a>
+              </li>
+              <li>
+                <i class="fas fa-lock"></i>
+                <a href="#"> Register</a>
+              </li>
+              <li>
+                <i class="fas fa-bars"></i>
+                <a href="#"></a>
+              </li>
             </ul>
           </div>
         </div>
@@ -37,7 +45,7 @@
           <div class="col text-left phone-number">
             <p><i class="fas fa-mobile-alt"></i> 2300 - 3560 - 222</p>
           </div>
-          <div class="col text-center">
+          <div class="col text-center-top">
             <a href="#"><img src="./images/logo.png"></a>
           </div>
           <div class="col text-right cart">
