pliki zmodyfikowane podczas tworzenia section--promotion

--- a/src/index.html
+++ b/src/index.html
@@ -84,6 +84,118 @@
       </div>
     </div>
   </header>
+
+  <div class="section--promotion">
+    <div class="container">
+      <div class="row">
+        <div class="col-5">
+          <div class="panel-bar">
+          <div class="row">
+            <div class="col-6 hot_deals">
+              <h4>HOT DEALS</h4>
+            </div>
+            <div class="col-2"></div>
+            <div class="col-4 col-auto dots">
+              <ul>
+                <li><a href="#" class="active"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class=" photos">
+          <div class="row">
+            <img class="photo" src="images/chair-902360_640.jpg" alt="chair">
+            <div class="col-12">
+              <div class="buttons">
+                <a href="#" class="btn-main-small"><i class="fa fa-shopping-basket"></i> ADD TO CART</a>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="icons">
+              <div class="col-3">
+                <div class="icon days">25 days</div>
+              </div>
+              <div class="col-3">
+                <div class="icon hrs">10 hrs</div>
+              </div>
+              <div class="col-3">
+                <div class="icon mins">45 mins</div>
+              </div>
+              <div class="col-3">
+                <div class="icon secs">30 secs</div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="section--products">
+          <div class="section_product_box">
+            <div class="row">
+              <div class="col-12">
+                  <div class="product-box">
+                    <div class="content">
+                      <h5>Aenean Ru Bristique</h5>
+                      <div class="stars">
+                        <a href="#" class="full"></a>
+                        <a href="#" class="full"></a>
+                      </div>
+                    </div>
+                    <div class="line"></div>
+                    <div class="actions">
+                      <div class="col-5">
+                        <div class="outlines">
+                          <a href="#" class="btn-outline"><i class="fas fa-eye"></i></a>
+                          <a href="#" class="btn-outline"><i class="fas fa-heart"></i></a>
+                          <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
+                        </div>
+                      </div>
+                      <div class="col-3">
+                        <div class="discount">$ 350.00</div>
+                      </div>
+                      <div class="col-4">
+                        <div class="btn-main-small no-hover">$ 30.00</div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-7">
+          <diw class="row">
+            <div class="col-12 photo">
+              <img class="photo_sofa" src="images/sofa-2337362_640.jpg" alt="sofa"/>
+            </div>
+          </diw>
+          <div class="row">
+            <div class=" indoor_furniture">
+              <h6>INDOR FURNITURE
+                <p>SAVE UP TO 50% OF ALL FURNITURE</p>
+              </h6>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-12 buttons">
+              <a href="#" class="btn-main-small">SHOP NOW</a>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-6 button">
+              <div class="btn-main-small"><i class="fa fa-chevron-left"></i></div>
+            </div>
+            <div class="col-6 button">
+              <div class="btn-main-small"><i class="fa fa-chevron-right"></i></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
   <div class="section--features">
     <div class="container">
       <div class="row">
