--- a/src/index.html
+++ b/src/index.html
@@ -69,7 +69,16 @@
               </div>
             </form>
           </div>
-          <div class="col-auto menu">
+          <div class="col">
+            <div class="mobile-menu">
+                <div class="container" onclick="myFunction()">
+                  <div class="bar1"></div>
+                  <div class="bar2"></div>
+                  <div class="bar3"></div>
+                </div>
+            </div>
+          </div>
+          <div class="col-auto menu"  id="col-menu" >
             <ul>
               <li><a href="#" class="active">Home</a></li>
               <li><a href="#">Furniture</a></li>
@@ -571,6 +580,16 @@
       </div>
     </div>
   </footer>
+  <script>
+    function myFunction() {
+      var x = document.getElementById("col-menu");
+      if (x.style.display === "block") {
+        x.style.display = "none";
+      } else {
+        x.style.display = "block";
+      }
+    }
+  </script>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
