zmodyfikowane pliki index.html i style.scss

--- a/src/index.html
+++ b/src/index.html
@@ -106,7 +106,7 @@
         </div>
         <div class=" photos">
           <div class="row">
-            <img class="photo" src="images/chair-902360_640.jpg" alt="chair">
+            <img src="images/chair-902360_640.jpg" alt="chair" class="image">
             <div class="col-12">
               <div class="buttons">
                 <a href="#" class="btn-main-small"><i class="fa fa-shopping-basket"></i> ADD TO CART</a>
