--- a/src/index.html
+++ b/src/index.html
@@ -498,6 +498,48 @@
       </div>
     </div>
   </div>
+  <div class="section--feetback">
+    <div class="container">
+      <div class="panel-bar">
+        <div class="row no-gutters align-items-end">
+          <div class="col-auto heading">
+            <h3>client feetback</h3>
+          </div>
+          <div class="col"></div>
+          <div class="col-auto dots">
+            <ul>
+              <li><a href="#" class="active"></a></li>
+              <li><a href="#"></a></li>
+              <li><a href="#"></a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12 post-info">
+          <img src="./images/quotations.png"/>
+          <h4>Aliquam dictum pellentesque nibh sit amet dapibus. Vivamus eget luctus nisi. Nullam euismod leo
+          vehicula, rutrum magna in, ornare enim vehicula, rutrum magna in, ornare enim.</h4>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-6 photo-client">
+          <img src="./images/passion-1690965_640.jpg"/>
+        </div>
+        <div class="col-6 post-client">
+          <div class="info_client">
+            <div class="row">
+              <h4>John SMITH</h4>
+            </div>
+            <div class="row">
+              <h4>Future client</h4>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <footer>
     <div class="footer-menu">
       <div class="container">
