--- a/src/index.html
+++ b/src/index.html
@@ -554,6 +554,8 @@
       <div class="container">
         <div class="row align-items-center">
           <div class="col"></div>
+        </div>
+        <div class="row">
           <div class="col copyright text-center">
             <p>©Copyright 2016 Bazar | All Rights Reserved</p>
           </div>
