All sugestions implemented

--- a/src/index.html
+++ b/src/index.html
@@ -23,16 +23,19 @@
           <div class="col text-right">
             <ul>
               <li>
-                <i class="fas fa-user"></i>
-                <a href="#"> Login</a>
+                <a class="icon-desc" href="#"> Login
+                  <i class="fas fa-user"></i>
+                </a>
               </li>
               <li>
-                <i class="fas fa-lock"></i>
-                <a href="#"> Register</a>
+                <a class="icon-desc" href="#"> Register
+                  <i class="fas fa-lock"></i>
+                </a>
               </li>
               <li>
-                <i class="fas fa-bars"></i>
-                <a href="#"></a>
+                <a  class="icon-desc" href="#">
+                  <i class="fas fa-bars"></i>
+                </a>
               </li>
             </ul>
           </div>
