add new section sale

--- a/src/index.html
+++ b/src/index.html
@@ -174,6 +174,45 @@
       </div>
     </div>
   </div>
+  <div class="section--sale">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-6 col-sm-12">
+          <div class="big-sale">
+            <div class="photo"> 
+              <img src="./images/furniture-6.png">
+              <div class="sale-off"> 
+                <div class="sale-off-text">              
+                  <h3>Guest room</h3>
+                  <h2>Sofa</h2>
+                  <div class="sale-off-border">
+                    <h1>-20%</h1>
+                  </div> 
+                </div>               
+              </div>
+            </div>       
+          </div>
+        </div>
+        <div class="col-lg-6 col-sm-12">
+          <div class="small-sale">
+            <img src="./images/office-chair.jpg">             
+            <div class="sale-box-one">
+              <p><strong>Office</strong> chair</p>
+              <p>collection</p>
+              <p>$200.00</p>
+            </div>           
+          </div>
+          <div class="small-sale">
+            <img src="./images/sofa.jpg">             
+            <div class="sale-box-two">
+              <p><strong>special</strong> collection</p>
+              <p>Save up 45% of furniture</p>             
+            </div>           
+          </div>  
+        </div>
+      </div>
+    </div>    
+  </div>
   <div class="section--products">
     <div class="container">
       <div class="panel-bar">
