usunięte konflikty, poprawione stylowanie

--- a/src/index.html
+++ b/src/index.html
@@ -94,8 +94,7 @@
             <div class="col-6 hot_deals">
               <h4>HOT DEALS</h4>
             </div>
-            <div class="col-2"></div>
-            <div class="col-4 col-auto dots">
+            <div class="col-auto dots">
               <ul>
                 <li><a href="#" class="active"></a></li>
                 <li><a href="#"></a></li>
@@ -108,7 +107,7 @@
           <div class="row">
             <img src="images/chair-902360_640.jpg" alt="chair" class="image">
             <div class="col-12">
-              <div class="buttons">
+              <div class="col-auto buttons">
                 <a href="#" class="btn-main-small"><i class="fa fa-shopping-basket"></i> ADD TO CART</a>
               </div>
             </div>
@@ -151,11 +150,11 @@
                           <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
                         </div>
                       </div>
-                      <div class="col-3">
+                      <div class="col-4">
                         <div class="discount">$ 350.00</div>
                       </div>
-                      <div class="col-4">
-                        <div class="btn-main-small no-hover">$ 30.00</div>
+                      <div class="col-3">
+                        <div class="price">$ 300.00</div>
                       </div>
                     </div>
                   </div>
@@ -172,21 +171,20 @@
           </diw>
           <div class="row">
             <div class=" indoor_furniture">
-              <h6>INDOR FURNITURE
-                <p>SAVE UP TO 50% OF ALL FURNITURE</p>
-              </h6>
+              <div class="saveup">
+                <h2>INDOR FURNITURE</h2>
+                <h5>SAVE UP TO 50% OF ALL FURNITURE</h5>
+              </div>
             </div>
           </div>
           <div class="row">
-            <div class="col-12 buttons">
+            <div class="col-12 button">
               <a href="#" class="btn-main-small">SHOP NOW</a>
             </div>
           </div>
           <div class="row">
-            <div class="col-6 button">
+            <div class="col-12 button_arrow">
               <div class="btn-main-small"><i class="fa fa-chevron-left"></i></div>
-            </div>
-            <div class="col-6 button">
               <div class="btn-main-small"><i class="fa fa-chevron-right"></i></div>
             </div>
           </div>
