--- a/src/index.html
+++ b/src/index.html
@@ -88,7 +88,7 @@
     <div class="container">
       <div class="row">
         <div class="col">
-          <a href ="" class="feature-box active">
+          <a href ="#" class="feature-box active">
             <div class="icon">
               <i class="fas fa-truck"></i>
             </div>
@@ -99,7 +99,7 @@
           </a>
         </div>
         <div class="col">
-          <a href ="" class="feature-box">
+          <a href ="#" class="feature-box">
             <div class="icon">
               <i class="fas fa-headphones"></i>
             </div>
@@ -110,7 +110,7 @@
           </a>
         </div>
         <div class="col">
-          <a href ="" class="feature-box">
+          <a href ="#" class="feature-box">
             <div class="icon">
               <i class="fas fa-reply-all"></i>
             </div>
@@ -121,7 +121,7 @@
           </a>
         </div>
         <div class="col">
-          <a href ="" class="feature-box">
+          <a href ="#" class="feature-box">
             <div class="icon">
               <i class="fas fa-bullhorn"></i>
             </div>
