--- a/src/index.html
+++ b/src/index.html
@@ -58,9 +58,30 @@
             <form action="" class="search-form">
               <div class="category">
                 <i class="fas fa-list-ul"></i>
-                <select name="" id="">
-                  <option value="">Select a category</option>
-                </select>
+                <div class="select-cta">
+                  <p>Select a category</p>
+                </div>
+                <ul class="category-first">
+                  <li>Option 1</li>
+                  <li>
+                    <p>Option 2</p>
+                    <ul class="category-second">
+                      <li>Option 2.1</li>
+                      <li>Option 2.2</li>
+                      <li>Option 2.3</li>
+                      <li>Option 2.4</li>
+                    </ul>
+                  </li>
+                  <li>Option 3</li>
+                  <li>
+                    <p>Option 4</p>
+                    <ul class="category-second">
+                      <li>Option 4.1</li>
+                      <li>Option 4.2</li>
+                    </ul>
+                  </li>
+                  <li>Option 5</li>
+                </ul>
                 <i class="fas fa-caret-down"></i>
               </div>
               <div class="search-field">
