--- a/src/index.html
+++ b/src/index.html
@@ -34,13 +34,13 @@
     <div class="company-claim">
       <div class="container">
         <div class="row align-items-center">
-          <div class="col text-left phone-number">
+          <div class="col text-md-left text-sm-right phone-number order-md-1 order-sm-2">
             <p><i class="fas fa-mobile-alt"></i> 2345 - 3560 - 222</p>
           </div>
-          <div class="col text-center">
+          <div class="col text-md-center text-sm-left logo order-md-2 order-sm-1">
             <a href="#"><img src="./images/logo.png"></a>
           </div>
-          <div class="col text-right cart">
+          <div class="col text-right cart order-md-3 order-sm-2">
             <a href="#" class="cart-box">
               <div class="cart-icon">
                 <i class="fas fa-shopping-basket"></i>
