Add RWD to footer menu links

--- a/src/index.html
+++ b/src/index.html
@@ -527,7 +527,7 @@
     <div class="footer-menu">
       <div class="container">
         <div class="row">
-          <div class="col">
+          <div class="col col-12 col-sm-6 col-md-3">
             <div class="menu-wrapper">
               <h6>Information</h6>
               <ul>
@@ -538,7 +538,7 @@
               </ul>
             </div>
           </div>
-          <div class="col">
+          <div class="col col-12 col-sm-6 col-md-3">
             <div class="menu-wrapper">
               <h6>My account</h6>
               <ul>
@@ -549,7 +549,7 @@
               </ul>
             </div>
           </div>
-          <div class="col">
+          <div class="col col-12 col-sm-6 col-md-3">
             <div class="menu-wrapper">
               <h6>Information</h6>
               <ul>
@@ -560,7 +560,7 @@
               </ul>
             </div>
           </div>
-          <div class="col">
+          <div class="col col-12 col-sm-6 col-md-3">
             <div class="menu-wrapper">
               <h6>Orders</h6>
               <ul>
