--- a/src/index.html
+++ b/src/index.html
@@ -578,11 +578,11 @@
     <div class="bottom-bar">
       <div class="container">
         <div class="row align-items-center">
-          <div class="col"></div>
-          <div class="col copyright text-center">
+          <div class="col col-12 col-md-12 col-lg-4"></div>
+          <div class="col col-12 col-md-6 col-lg-4 copyright text-center text-md-left text-lg-center">
             <p>©Copyright 2016 Bazar | All Rights Reserved</p>
           </div>
-          <div class="col socialmedia text-right">
+          <div class="col col-12 col-md-6 col-lg-4 socialmedia text-center text-md-right">
             <ul>
               <li><a href="#"><i class="fab fa-twitter"></i></a></li>
               <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
