Add classes to HTML elements

--- a/src/index.html
+++ b/src/index.html
@@ -62,25 +62,25 @@
                   <p>Select a category</p>
                 </div>
                 <ul class="category-first">
-                  <li>Option 1</li>
-                  <li>
+                  <li class="category-element">Option 1</li>
+                  <li class="category-element">
                     <p>Option 2</p>
                     <ul class="category-second">
-                      <li>Option 2.1</li>
-                      <li>Option 2.2</li>
-                      <li>Option 2.3</li>
-                      <li>Option 2.4</li>
+                      <li class="category-element">Option 2.1</li>
+                      <li class="category-element">Option 2.2</li>
+                      <li class="category-element">Option 2.3</li>
+                      <li class="category-element">Option 2.4</li>
                     </ul>
                   </li>
-                  <li>Option 3</li>
-                  <li>
+                  <li class="category-element">Option 3</li>
+                  <li class="category-element">
                     <p>Option 4</p>
                     <ul class="category-second">
-                      <li>Option 4.1</li>
-                      <li>Option 4.2</li>
+                      <li class="category-element">Option 4.1</li>
+                      <li class="category-element">Option 4.2</li>
                     </ul>
                   </li>
-                  <li>Option 5</li>
+                  <li class="category-element">Option 5</li>
                 </ul>
                 <i class="fas fa-caret-down"></i>
               </div>
