--- a/src/index.html
+++ b/src/index.html
@@ -54,7 +54,7 @@
     <div class="menu-bar">
       <div class="container">
         <div class="row align-items-center">
-          <div class="col">
+          <div class="col search-wrapper">
             <form action="" class="search-form">
               <div class="category">
                 <i class="fas fa-list-ul"></i>
@@ -89,8 +89,11 @@
                 <button><i class="fa fa-search"></i></button>
               </div>
             </form>
+            <div class="category-list-show">
+              <i class="fas fa-angle-double-down"></i>
+            </div>
           </div>
-          <div class="col-auto menu">
+          <div id="menu-dropdown" class="col-auto menu">
             <ul>
               <li><a href="#" class="active">Home</a></li>
               <li><a href="#">Furniture</a></li>
