--- a/src/index.html
+++ b/src/index.html
@@ -23,8 +23,8 @@
           </div>
           <div class="col text-right">
             <ul>
-              <li><a href="#"><i class="fas fa-user"></i><span>Login</span></a></li>
-              <li><a href="#"><i class="fas fa-lock"></i><span>Register</span></a></li>
+              <li><a href="#"><i class="fas fa-user"></i><span class="d-sm-none d-md-inline-block">Login</span></a></li>
+              <li><a href="#"><i class="fas fa-lock"></i><span class="d-sm-none d-md-inline-block">Register</span></a></li>
               <li><a href="#"><i class="fas fa-bars"></i></a></li>
             </ul>
           </div>
