Create loop for classes array and start work on event listener for section

--- a/src/index.html
+++ b/src/index.html
@@ -171,8 +171,8 @@
             </div>
             <div class="content">
               <h5>Aenean Ru Bristique</h5>
-              <div class="stars">
-                <a href="#" class="full"></a>
+              <div id="rate1" class="stars">
+                <a href="#" class="full active"></a>
                 <a href="#" class="full"></a>
                 <a href="#"></a>
                 <a href="#"></a>
@@ -202,7 +202,7 @@
             </div>
             <div class="content">
               <h5>Aenean Ru Bristique</h5>
-              <div class="stars">
+              <div id="rate2" class="stars">
                 <a href="#" class="full"></a>
                 <a href="#" class="full"></a>
                 <a href="#"></a>
@@ -233,7 +233,7 @@
             </div>
             <div class="content">
               <h5>Aenean Ru Bristique</h5>
-              <div class="stars">
+              <div id="rate3" class="stars">
                 <a href="#" class="full"></a>
                 <a href="#" class="full"></a>
                 <a href="#"></a>
@@ -264,7 +264,7 @@
             </div>
             <div class="content">
               <h5>Aenean Ru Bristique</h5>
-              <div class="stars">
+              <div id="rate4" class="stars">
                 <a href="#" class="full"></a>
                 <a href="#" class="full"></a>
                 <a href="#"></a>
@@ -295,7 +295,7 @@
             </div>
             <div class="content">
               <h5>Aenean Ru Bristique</h5>
-              <div class="stars">
+              <div id="rate5" class="stars">
                 <a href="#" class="full"></a>
                 <a href="#" class="full"></a>
                 <a href="#"></a>
@@ -326,7 +326,7 @@
             </div>
             <div class="content">
               <h5>Aenean Ru Bristique</h5>
-              <div class="stars">
+              <div id="rate6" class="stars">
                 <a href="#" class="full"></a>
                 <a href="#" class="full"></a>
                 <a href="#"></a>
@@ -357,7 +357,7 @@
             </div>
             <div class="content">
               <h5>Aenean Ru Bristique</h5>
-              <div class="stars">
+              <div id="rate7" class="stars">
                 <a href="#" class="full"></a>
                 <a href="#" class="full"></a>
                 <a href="#"></a>
@@ -388,7 +388,7 @@
             </div>
             <div class="content">
               <h5>Aenean Ru Bristique</h5>
-              <div class="stars">
+              <div id="rate8" class="stars">
                 <a href="#" class="full"></a>
                 <a href="#" class="full"></a>
                 <a href="#"></a>
@@ -576,6 +576,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
     crossorigin="anonymous"></script>
   <script src="./scripts/bootstrap.min.js"></script>
+  <script src="./scripts/stars.js"></script>
   <script src="./scripts/app.js"></script>
 </body>
 
