--- a/src/index.html
+++ b/src/index.html
@@ -14,14 +14,14 @@
     <div class="top-bar">
       <div class="container">
         <div class="row">
-          <div class="col text-left">
+          <div class="col-lg-6 col-md-6 col-sm-6 col-9 text-left">
             <ul>
               <li><a href="#">USD <i class="fas fa-caret-down"></i></a></li>
               <li><a href="#">English <i class="fas fa-caret-down"></i></a></li>
               <li><a href="#">Help <i class="fas fa-caret-down"></i></a></li>
             </ul>
           </div>
-          <div class="col text-right">
+          <div class="col-lg-6 col-md-6 col-sm-6 col-3 text-right">
             <ul>
               <li><a href="#"><i class="fas fa-user"></i><span class="d-sm-none d-md-inline-block">Login</span></a></li>
               <li><a href="#"><i class="fas fa-lock"></i><span class="d-sm-none d-md-inline-block">Register</span></a></li>
@@ -34,7 +34,7 @@
     <div class="company-claim">
       <div class="container">
         <div class="row align-items-center">
-          <div class="col text-md-left text-sm-right phone-number order-md-1 order-sm-2">
+          <div class="col text-md-left text-sm-right text-right phone-number order-md-1 order-sm-2">
             <p><i class="fas fa-mobile-alt"></i> 2345 - 3560 - 222</p>
           </div>
           <div class="col text-md-center text-sm-left logo order-md-2 order-sm-1">
