Hide "login" and "register" label for xs devices

--- a/src/index.html
+++ b/src/index.html
@@ -23,8 +23,8 @@
           </div>
           <div class="col-lg-6 col-md-6 col-sm-6 col-3 text-right">
             <ul>
-              <li><a href="#"><i class="fas fa-user"></i><span class="d-sm-none d-md-inline-block">Login</span></a></li>
-              <li><a href="#"><i class="fas fa-lock"></i><span class="d-sm-none d-md-inline-block">Register</span></a></li>
+              <li><a href="#"><i class="fas fa-user"></i><span class="d-sm-none d-none d-md-inline-block">Login</span></a></li>
+              <li><a href="#"><i class="fas fa-lock"></i><span class="d-sm-none d-none d-md-inline-block">Register</span></a></li>
               <li><a href="#"><i class="fas fa-bars"></i></a></li>
             </ul>
           </div>
