WDP181101-6 add old prices and extend css button style

--- a/src/index.html
+++ b/src/index.html
@@ -186,7 +186,7 @@
                 <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
               </div>
               <div class="price">
-                <div class="old-price-tag"></div>
+                <div class="old-price-tag">$ 35.00</div>
                 <div class="btn-main-small no-hover">$ 30.00</div>
               </div>
             </div>
@@ -378,7 +378,7 @@
                 <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
               </div>
               <div class="price">
-                <div class="old-price-tag"></div>
+                <div class="old-price-tag">$ 40.00</div>
                 <div class="btn-main-small no-hover">$ 30.00</div>
               </div>
             </div>
@@ -410,7 +410,7 @@
                 <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
               </div>
               <div class="price">
-                <div class="old-price-tag"></div>
+                <div class="old-price-tag">$ 50.00</div>
                 <div class="btn-main-small no-hover">$ 30.00</div>
               </div>
             </div>
