Fix payment methods display and center content on very small displays

--- a/src/index.html
+++ b/src/index.html
@@ -526,7 +526,7 @@
   <footer>
     <div class="footer-menu">
       <div class="container">
-        <div class="row">
+        <div class="row text-center text-sm-left">
           <div class="col col-12 col-sm-6 col-md-3">
             <div class="menu-wrapper">
               <h6>Information</h6>
@@ -570,8 +570,10 @@
                 <li><a href="#">Shipping</a></li>
               </ul>
             </div>
-            <img src="./images/cards.png">
           </div>
+        </div>
+        <div class="row justify-content-center justify-content-sm-end">
+          <img src="./images/cards.png"/>
         </div>
       </div>
     </div>
