Find working solution for adding class to proper stars

--- a/src/index.html
+++ b/src/index.html
@@ -172,11 +172,11 @@
             <div class="content">
               <h5>Aenean Ru Bristique</h5>
               <div id="rate1" class="stars">
-                <a href="#" class="full active"></a>
-                <a href="#" class="full"></a>
-                <a href="#"></a>
-                <a href="#"></a>
-                <a href="#"></a>
+                <a class="s1 full active" href="#"></a>
+                <a class="s2 full" href="#"></a>
+                <a class="s3" href="#"></a>
+                <a class="s4" href="#"></a>
+                <a class="s5" href="#"></a>
               </div>
             </div>
             <div class="line"></div>
