Finish first part - marking stars when hover

--- a/src/index.html
+++ b/src/index.html
@@ -203,11 +203,11 @@
             <div class="content">
               <h5>Aenean Ru Bristique</h5>
               <div id="rate2" class="stars">
-                <a href="#" class="full"></a>
-                <a href="#" class="full"></a>
-                <a href="#"></a>
-                <a href="#"></a>
-                <a href="#"></a>
+                <a class="s1 full" href="#"></a>
+                <a class="s2 full" href="#"></a>
+                <a class="s3" href="#"></a>
+                <a class="s4" href="#"></a>
+                <a class="s5" href="#"></a>
               </div>
             </div>
             <div class="line"></div>
@@ -234,11 +234,11 @@
             <div class="content">
               <h5>Aenean Ru Bristique</h5>
               <div id="rate3" class="stars">
-                <a href="#" class="full"></a>
-                <a href="#" class="full"></a>
-                <a href="#"></a>
-                <a href="#"></a>
-                <a href="#"></a>
+                <a class="s1 full" href="#"></a>
+                <a class="s2 full" href="#"></a>
+                <a class="s3" href="#"></a>
+                <a class="s4" href="#"></a>
+                <a class="s5" href="#"></a>
               </div>
             </div>
             <div class="line"></div>
@@ -265,11 +265,11 @@
             <div class="content">
               <h5>Aenean Ru Bristique</h5>
               <div id="rate4" class="stars">
-                <a href="#" class="full"></a>
-                <a href="#" class="full"></a>
-                <a href="#"></a>
-                <a href="#"></a>
-                <a href="#"></a>
+                <a class="s1 full" href="#"></a>
+                <a class="s2 full" href="#"></a>
+                <a class="s3" href="#"></a>
+                <a class="s4" href="#"></a>
+                <a class="s5" href="#"></a>
               </div>
             </div>
             <div class="line"></div>
@@ -296,11 +296,11 @@
             <div class="content">
               <h5>Aenean Ru Bristique</h5>
               <div id="rate5" class="stars">
-                <a href="#" class="full"></a>
-                <a href="#" class="full"></a>
-                <a href="#"></a>
-                <a href="#"></a>
-                <a href="#"></a>
+                <a class="star s1 full" href="#"></a>
+                <a class="star s2 full" href="#"></a>
+                <a class="star s3" href="#"></a>
+                <a class="s4" href="#"></a>
+                <a class="s5" href="#"></a>
               </div>
             </div>
             <div class="line"></div>
