Add bootstrap grid classes to product boxes

--- a/src/index.html
+++ b/src/index.html
@@ -184,7 +184,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-3">
+        <div class="col-12 col-sm-6 col-lg-4 col-xl-3">
           <div class="product-box">
             <div class="photo">
               <div class="sale">sale</div>
@@ -215,7 +215,7 @@
             </div>
           </div>
         </div>
-        <div class="col-3">
+        <div class="col-12 col-sm-6 col-lg-4 col-xl-3">
           <div class="product-box">
             <div class="photo">
               <div class="sale">sale</div>
@@ -247,7 +247,7 @@
             </div>
           </div>
         </div>
-        <div class="col-3">
+        <div class="col-12 col-sm-6 col-lg-4 col-xl-3">
           <div class="product-box">
             <div class="photo">
               <div class="sale">sale</div>
@@ -279,7 +279,7 @@
             </div>
           </div>
         </div>
-        <div class="col-3">
+        <div class="col-12 col-sm-6 col-lg-4 col-xl-3">
           <div class="product-box">
             <div class="photo">
               <div class="sale">sale</div>
@@ -310,7 +310,7 @@
             </div>
           </div>
         </div>
-        <div class="col-3">
+        <div class="col-12 col-sm-6 col-lg-4 col-xl-3">
           <div class="product-box">
             <div class="photo">
               <div class="sale">sale</div>
@@ -342,7 +342,7 @@
             </div>
           </div>
         </div>
-        <div class="col-3">
+        <div class="col-12 col-sm-6 col-lg-4 col-xl-3">
           <div class="product-box">
             <div class="photo">
               <div class="sale">sale</div>
@@ -373,7 +373,7 @@
             </div>
           </div>
         </div>
-        <div class="col-3">
+        <div class="col-12 col-sm-6 col-lg-4 col-xl-3">
           <div class="product-box">
             <div class="photo">
               <div class="sale">sale</div>
@@ -404,7 +404,7 @@
             </div>
           </div>
         </div>
-        <div class="col-3">
+        <div class="col-12 col-sm-6 col-lg-4 col-xl-3">
           <div class="product-box">
             <div class="photo">
               <div class="sale">sale</div>
